--- a/profile.css
+++ b/profile.css
@@ -187,6 +187,10 @@ button:hover {
         border: 1px solid #ccc;
         padding: 20px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        min-width: 1000px;
+        max-width: 1000px;
+        overflow: scroll;
+        max-height: 700px;
     }
 
     /* Style for the close button */
@@ -196,3 +200,10 @@ button:hover {
         right: 10px;
         cursor: pointer;
     }
+
+
+
+/* DIALOG BOXES*/
+.contract-details{
+
+}
