--- a/profile.css
+++ b/profile.css
@@ -35,17 +35,21 @@ main{
     margin: 50px 150px;
 }
 
-/* Header style */
-.header {
-    background: rgba(0, 150, 136, 0.20);
-    color: black;
-    text-align: center;
-    padding: 20px 0;
+header {
+    background-color: #009688;
+    padding: 20px 0; /* Espaciado interno para separar el contenido */
+    text-align: center; /* Centra el texto horizontalmente */
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3); /* Efecto de sombra para resaltar */
+    width: 95%;
+    height: 45px;
+    margin-left: 35px;
 }
 
-/* Title style */
-.header_text {
-    font-size: 32px;
+header h1{
+    font-family: 'Montserrat';
+    color: white;
+    font-size: 40px; /* Tamaño del texto */
     margin: 0;
 }
 
@@ -64,13 +68,27 @@ main{
     flex-direction: column;
     gap: 20px;
 }
-
-.candidate-name {
-    font-size: 24px;
+.candidate-name{
+    padding-left: 15px;
+    margin:0;
+}
+.candidate-name h1{
+    font-size: 40px;
     font-weight: bold;
-    color: #005c53;
+    margin: 0;
+    color: #009688;
+}
+/* Estilos para ocultar los bordes de la tabla */
+table {
+    border-collapse: collapse;
 }
 
+/* Estilos para las celdas de la tabla */
+td {
+    padding: 5px;
+    border: none; /* Elimina los bordes de las celdas */
+     /* Opcional: establece el peso de la fuente en negrita */
+}
 .candidate-info p{
     font-family: Work Sans;
     font-size: 20px;
@@ -85,6 +103,7 @@ main{
 
 .box-section {
     padding: 15px;
+    padding-top: 0px;
     gap: 10px;
     flex: 1;
 }
