--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ label {
     display: none;
 }
 
-input[type="submit"] {
+#open-new-tab {
     background-color: #009688;
     color: white;
     padding: 8px 15px;
@@ -108,7 +108,7 @@ input[type="submit"] {
     cursor: pointer;
 }
 
-input[type="submit"]:hover {
+#open-new-tab:hover {
     background-color: #007766;
 }
 
@@ -136,7 +136,7 @@ select[name="municipio"] {
     margin-bottom: 10px;
 }
 
-select[name="candidato"] {
+select[name="candidato"], select[name="candidatoIrregular"] {
     background-color: #009688;
     color: white;
     font-size: 16px; /* Tamaño de fuente aumentado en 2px */
@@ -147,11 +147,11 @@ select[name="candidato"] {
 }
 
 /* Estilo para el drop list de candidatos */
-#candidato {
+#candidato , #candidatoIrregular{
     background-color: #009688;
     color: white;
     padding: 10px;
     border-radius: 4px;
     font-size: 16px;
-    width: 200px;
+    width: 250px;
 }
