--- a/style.css
+++ b/style.css
@@ -155,3 +155,46 @@ select[name="candidato"] {
     font-size: 16px;
     width: 200px;
 }
+
+.loading-icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    visibility: visible;
+}
+
+.dots {
+    display: flex;
+    width: 60px !important; 
+    height: 20px !important;
+    justify-content: center;
+    align-items: center;
+}
+
+.dots > div{
+    box-sizing: content-box; 
+    width: 15px !important; 
+    height: 15px !important;
+    margin: 0 3px;
+    border-radius: 50%;
+    background-color: #000000;
+    animation: loading-animation 3s infinite;  /* Adjusted the animation duration to 3s for a slower effect */
+}
+
+.dots > div:nth-child(2) {
+    animation-delay: 0.5s;
+}
+
+.dots > div:nth-child(3) {
+    animation-delay: 1s;
+}
+
+@keyframes loading-animation {
+    0%, 100% {
+        transform: scale(0.5);
+    }
+    50% {
+        transform: scale(1);
+    }
+}
